JVMARGs extracted as constants