@@ -75,8 +75,8 @@ public class GenerateGenModelCodeStep extends AbstractAntTargetGenerator {
 		// TODO use constant here
 		sb.append("<java fork=\"true\" classname=\""
 				+ IConstants.BUILDEXT_EXECUTABLE + "\" failonerror=\"true\">");
-		sb.append("<jvmarg value=\"-XX:MaxPermSize=256m\"/>");
-		sb.append("<jvmarg value=\"-Xmx1024m\"/>");
+		sb.append("<jvmarg value=\"" + JVMARG_MAXPERM + "\"/>");
+		sb.append("<jvmarg value=\"" + JVMARG_MX + "\"/>");
 		sb.append("<arg value=\"" + genModelPath + "\"/>");
 		sb.append("<arg value=\"" + generatorModel.getProjectDir().getName()
 				+ "\"/>");
